common fixes and now server is running smoothly...
